Fix score alignment

--- a/planb-react/src/planB/css/App.css
+++ b/planb-react/src/planB/css/App.css
@@ -103,6 +103,11 @@ body {
     line-height: 40px;
     border-radius: 50%;
     font-size: 1.5rem;
+    margin: 0;
+}
+
+.song-title {
+    margin: 0;
 }
 
 .portfolio{
@@ -112,6 +117,7 @@ body {
 .song-display-header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 
